// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots theme/Colors main 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <h3>
      Primary colors
    </h3>
    
    primary-color
    
    <p
      style="padding: 1rem;"
    />
    
    primary-color-light
    
    <p
      style="padding: 1rem;"
    />
    
    primary-color-lighten
    
    <p
      style="padding: 1rem;"
    />
    
    primary-color-very-lighten
    
    <p
      style="padding: 1rem;"
    />
    
    primary-color-darken
    
    <p
      style="padding: 1rem;"
    />
     
    <h3>
      Secondary colors
    </h3>
    
    secondary-color
    
    <p
      style="padding: 1rem;"
    />
    
    secondary-color-light
    
    <p
      style="padding: 1rem;"
    />
    
    secondary-color-lighten
    
    <p
      style="padding: 1rem;"
    />
    
    secondary-color-very-lighten
    
    <p
      style="padding: 1rem;"
    />
    
    secondary-color-darken
    
    <p
      style="padding: 1rem;"
    />
  </div>
</div>
`;

exports[`storyshots theme/Colors semaphore 1`] = `
<div
  style="height: 100%;"
>
  <div>
    
    color-warning
    
    <p
      style="padding: 1rem;"
    />
    
    color-warning-light
    
    <p
      style="padding: 1rem;"
    />
    
    color-error
    
    <p
      style="padding: 1rem;"
    />
    
    color-error-light
    
    <p
      style="padding: 1rem;"
    />
    
    color-success
    
    <p
      style="padding: 1rem;"
    />
    
    color-success-light
    
    <p
      style="padding: 1rem;"
    />
  </div>
</div>
`;

exports[`storyshots theme/Colors states 1`] = `
<div
  style="height: 100%;"
>
  <div>
    
    color-warning
    
    <p
      style="padding: 1rem;"
    />
    
    color-warning-light
    
    <p
      style="padding: 1rem;"
    />
    
    color-warning-lighten
    
    <p
      style="padding: 1rem;"
    />
    
    color-warning-dark
    
    <p
      style="padding: 1rem;"
    />
    

    color-error
    
    <p
      style="padding: 1rem;"
    />
    
    color-error-light
    
    <p
      style="padding: 1rem;"
    />
    
    color-error-lighten
    
    <p
      style="padding: 1rem;"
    />
    
    color-error-dark
    
    <p
      style="padding: 1rem;"
    />
    

    color-success
    
    <p
      style="padding: 1rem;"
    />
    
    color-success-light
    
    <p
      style="padding: 1rem;"
    />
    
    color-success-lighten
    
    <p
      style="padding: 1rem;"
    />
    
    color-success-dark
    
    <p
      style="padding: 1rem;"
    />
  </div>
</div>
`;

exports[`storyshots theme/Colors surfaces 1`] = `
<div
  style="height: 100%;"
>
  <div>
    
    surface-a
    
    <p
      style="padding: 1rem;"
    />
    
    surface-b
    
    <p
      style="padding: 1rem;"
    />
    
    surface-c
    
    <p
      style="padding: 1rem;"
    />
    
    surface-d
    
    <p
      style="padding: 1rem;"
    />
    
    surface-e
    
    <p
      style="padding: 1rem;"
    />
    
    surface-f
    
    <p
      style="padding: 1rem;"
    />
    
    surface-w
    
    <p
      style="padding: 1rem;"
    />
    
    surface-lck-1
    
    <p
      style="padding: 1rem;"
    />
    
    surface-lck-2
    
    <p
      style="padding: 1rem;"
    />
  </div>
</div>
`;
